@startuml
title v1.0.2 StandardContext容器UML图

interface Valve
interface Contained
interface Context
interface Lifecycle
interface Mapper
abstract class ContainerBase
abstract class ValveBase
class StandardPipeline
class StandardContextValve
class StandardContext
class StandardContextMapper
class ValveImpl

ContainerBase <|-- StandardContext
ContainerBase "1" *-- "1" StandardPipeline : 标准管道结构详情见pip包
Lifecycle <|.. StandardContext
Context <|.. StandardContext

Valve <|.. ValveImpl

Valve <|.. ValveBase
Contained <|.. ValveBase

ValveBase <|-- StandardContextValve

StandardPipeline "1" o-- "n" ValveImpl
StandardPipeline "1" <-- "1" StandardContextValve
Mapper <|.. StandardContextMapper
StandardContext "1" *-- "1" StandardContextMapper

@enduml